src/test/deca/syntax/invalid/decaObjet/cast/02missingOParentVar.deca
// Description:
// Test d'un cast avec la parenthèse ouvrante manquante pour la variable du cast 
//
// Resultats:
//  02missingOParentVar.deca:18:18:
//
// Historique:
//    crée le 16/06/2022
class Point2D {     
    int x; // Abscisse     
    int y; // Ordonnee      
} 
class Point3D extends Point2D {     
    int z; // Hauteur      
}  
{             
    Point3D p = null;         
    p = (Point2D) p);     
}